--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@astrojs/sitemap": "^3.6.1",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.9",
+    "lucide-astro": "^0.556.0",
     "tailwindcss": "^4.1.18"
   }
 }
