--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.9",
     "lucide-astro": "^0.556.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^4.1.18"
   }
 }
